[gd_scene load_steps=3 format=3 uid="uid://bbhni2snkuiaj"]

[ext_resource type="Script" path="res://view/curator_selection_screen.gd" id="1"]
[ext_resource type="PackedScene" path="res://view/footer.tscn" id="2"]

[node name="CuratorSelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Selecione o curador da Segunda Cinéfila e então clique em Avançar:"

[node name="CuratorsList" type="OptionButton" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AboutLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Made with Godot Engine
(godotengine.org/license)"

[node name="Footer" parent="VBoxContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
back_button_enabled = false

[connection signal="item_selected" from="VBoxContainer/MarginContainer/VBoxContainer/CuratorsList" to="." method="_on_CuratorsList_item_selected"]
[connection signal="on_next" from="VBoxContainer/Footer" to="." method="_on_Footer_on_next"]
